--- a/index.html
+++ b/index.html
@@ -5,23 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscador de Películas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <style>
+        /* Estilos adicionales para el buscador */
+
+        .search-container {
+            background-color: #f2f2f2; /* Fondo gris claro para el contenedor de búsqueda */
+            border-radius: 5px; /* Bordes redondeados */
+            padding: 20px;
+        }
+
+        .form-control {
+            border-radius: 5px; /* Bordes redondeados para el input */
+            box-shadow: none; /* Quitar la sombra del input */
+        }
+
+        .movie-card {
+            border: none; /* Quitar el borde de las tarjetas */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Agregar una sombra sutil */
+            transition: transform 0.2s; /* Agregar una transición para el hover */
+        }
+
+        .movie-card:hover {
+            transform: translateY(-5px); /* Elevar ligeramente al pasar el mouse */
+        }
+
+        .movie-poster {
+            border-radius: 5px; /* Bordes redondeados para el póster */
+        }
+        .search-container {
+            margin-bottom: 20px;
+        }
+        .movie-card {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+        .movie-poster {
+            width: 100%;
+            height: auto;
+            max-height: 300px;
+            object-fit: cover;
+            object-position: center top;
+        }
+        h3{
+            margin-top: 15px;
+        }
+        p{
+            text-overflow: ellipsis;
+            height: 20px;
+            overflow: hidden;
+            white-space: nowrap;
+            padding: 0 10px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <form>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Buscar película" aria-label="Recipient's username" aria-describedby="button-addon2">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
-                    </div>
-                </form>
-            </div>
+<div class="container">
+    <div class="row search-container">
+        <div class="col-md-12">
+            <input type="text" class="form-control" id="searchInput" placeholder="Busca tu película favorita...">
         </div>
-        <div id="resultados">
-            </div>
     </div>
+    <div class="row movie-container" id="searchResults">
+        <p class="text-center">¡Empieza a buscar tu película favorita!</p>
+    </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+        $('#searchInput').on('input', function() {
+            var searchTerm = $(this).val();
+            // Aquí realizarías la llamada AJAX para buscar las películas
+            // Ejemplo:
+            $.ajax({
+                url: 'https://8611fd12-ea7a-4c64-95ff-da97f1cb874b.mock.pstmn.io/characters', // Reemplaza con la URL de tu API
+                data: {},
+                success: function(data) {
+                    $('#searchResults').html(''); // Limpia los resultados anteriores
+                    // Iterar sobre los resultados de la búsqueda y crear las tarjetas de películas
+                    $.each(data.data.results, function(index, movie) {
+                        var movieCard = $('<div class="col-md-4 movie-card text-center">');
+                        movieCard.append('<img src="' + movie.thumbnail.path + '.jpg" class="movie-poster">');
+                        movieCard.append('<h3>' + movie.name + '</h3>');
+                        movieCard.append('<p>' + movie.description + '</p>');
+                        $('#searchResults').append(movieCard);
+                    });
+                }
+            });
+        });
+    });
+</script>
 </body>
 </html>
