--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <style>
         /* Estilos adicionales para el buscador */
-
         .search-container {
             background-color: #f2f2f2; /* Fondo gris claro para el contenedor de búsqueda */
             border-radius: 5px; /* Bordes redondeados */
             padding: 20px;
+            margin-top: 20px;
         }
 
         .form-control {
@@ -32,31 +32,82 @@
         .movie-poster {
             border-radius: 5px; /* Bordes redondeados para el póster */
         }
+
         .search-container {
             margin-bottom: 20px;
         }
+
         .movie-card {
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            margin-bottom: 10px;
+            margin: 0 0 10px;
         }
+
         .movie-poster {
             width: 100%;
-            height: auto;
-            max-height: 300px;
+            height: 250px;
             object-fit: cover;
             object-position: center top;
         }
-        h3{
+
+        .movie-container {
+            margin: 0 10px;
+        }
+
+        h3 {
             margin-top: 15px;
         }
-        p{
+
+        .movie-card p {
             text-overflow: ellipsis;
             height: 20px;
             overflow: hidden;
             white-space: nowrap;
             padding: 0 10px;
+        }
+
+        #modal {
+            display: block;
+            position: fixed;
+            z-index: 999999;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+        }
+
+        #modal p {
+            margin-top: 20px;
+        }
+
+        #modal img {
+            height: 500px;
+        }
+
+        #init {
+            font-size: 40px;
+        }
+
+        .spinner-grow {
+            margin: 20px auto;
+        }
+
+        @media (min-width: 620px) {
+            .movie-container {
+                margin: 0 -20px;
+            }
+
+            .movie-card {
+                margin: 0 10px 20px;
+                width: calc(50% - 20px);
+            }
+        }
+
+        @media (min-width: 999px) {
+            .movie-card {
+                width: calc(33.333% - 20px);
+            }
         }
     </style>
 </head>
@@ -67,8 +118,25 @@
             <input type="text" class="form-control" id="searchInput" placeholder="Busca tu película favorita...">
         </div>
     </div>
-    <div class="row movie-container" id="searchResults">
-        <p class="text-center">¡Empieza a buscar tu película favorita!</p>
+    <div class="row movie-container text-center" id="searchResults">
+        <div class="spinner-grow text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+        <p id="init">¡Empieza a buscar tu personaje favorito!</p>
+    </div>
+
+    <div id="modal" class="modal modal-dialog modal-dialog-centered" style="display: none">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -76,26 +144,35 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-    $(document).ready(function() {
-        $('#searchInput').on('input', function() {
+    $(document).ready(function () {
+        const myModal = new bootstrap.Modal($('#modal'), {});
+        $('#searchInput').on('input', function () {
             var searchTerm = $(this).val();
-            // Aquí realizarías la llamada AJAX para buscar las películas
-            // Ejemplo:
             $.ajax({
-                url: 'https://8611fd12-ea7a-4c64-95ff-da97f1cb874b.mock.pstmn.io/characters', // Reemplaza con la URL de tu API
+                url: 'https://8611fd12-ea7a-4c64-95ff-da97f1cb874b.mock.pstmn.io/characters?a=2',
                 data: {},
-                success: function(data) {
-                    $('#searchResults').html(''); // Limpia los resultados anteriores
-                    // Iterar sobre los resultados de la búsqueda y crear las tarjetas de películas
-                    $.each(data.data.results, function(index, movie) {
-                        var movieCard = $('<div class="col-md-4 movie-card text-center">');
-                        movieCard.append('<img src="' + movie.thumbnail.path + '.jpg" class="movie-poster">');
+                success: function (data) {
+                    let results = data.data.results
+                    if (searchTerm.toLowerCase().startsWith('a')) {
+                        results = results.filter(r => r.name.toLowerCase().startsWith("a"))
+                    }
+                    $('#searchResults').html('');
+                    $.each(results, function (index, movie) {
+                        var movieCard = $('<div class="movie-card col-lg-4 col-md-6 col-sm-12 text-center">');
+                        var img = '<img src="' + movie.thumbnail.path + '.jpg" class="movie-poster">';
+                        var description = '<p>' + movie.description + '</p>';
+                        movieCard.append(img);
                         movieCard.append('<h3>' + movie.name + '</h3>');
-                        movieCard.append('<p>' + movie.description + '</p>');
+                        movieCard.append(description);
                         $('#searchResults').append(movieCard);
+                        movieCard.on('click', function () {
+                            $(".modal-title").empty().append(movie.name);
+                            $(".modal-body").empty().append(img + description + "<p><b>Publicación</b>: " + movie.modified + "</p>");
+                            myModal.show();
+                        });
                     });
                 },
-                error: function (){
+                error: function () {
                     $("#searchResults p").text("Ha ocurrido un error, intente nuevamente!");
                 }
             });
